--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,123 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/titleProjectNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="30sp"
+        android:textColor="@color/colorBtn_txt"
+        android:textStyle="bold"
+        android:textAllCaps="true"
+        android:layout_marginTop="25dp"
+        android:text="@string/project_3"/>
+
+    <LinearLayout
+        android:id="@+id/rootLayout_editText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/titleProjectNumber"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="25dp">
+
+        <EditText
+            android:id="@+id/name_editText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:hint="@string/name"
+            android:textColor="@color/colorBtn_txt"
+            android:textSize="19sp"
+            android:gravity="center_vertical"
+            android:inputType="text"
+            android:autofillHints="@string/name" />
+
+        <EditText
+            android:id="@+id/city_editText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:hint="@string/city"
+            android:textColor="@color/colorBtn_txt"
+            android:textSize="19sp"
+            android:gravity="center_vertical"
+            android:inputType="text"
+            android:autofillHints="@string/city"/>
+
+        <EditText
+            android:id="@+id/mobileNumber_editText"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:hint="@string/mobile_number"
+            android:textColor="@color/colorBtn_txt"
+            android:textSize="19sp"
+            android:gravity="center_vertical"
+            android:inputType="number"
+            android:maxLength="10"
+            android:autofillHints="@string/mobile_number" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/sendToSecondActivity_btn"
+        android:layout_width="210dp"
+        android:layout_height="65dp"
+        android:background="@color/colorBtn_txt"
+        app:layout_constraintTop_toBottomOf="@id/rootLayout_editText"
+        app:layout_constraintRight_toRightOf="@id/rootLayout_editText"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="25dp"
+        android:text="@string/send_to_activity_a"
+        android:textSize="18sp"
+        android:textColor="@color/colorBackground"
+        android:textAllCaps="false"/>
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        app:layout_constraintTop_toBottomOf="@id/sendToSecondActivity_btn"
+        android:layout_marginTop="25dp"
+        android:background="@color/colorBtn_txt"/>
+
+    <TextView
+        android:id="@+id/titleReviews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/view"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="26sp"
+        android:textColor="@color/colorBtn_txt"
+        android:textStyle="bold"
+        android:textAllCaps="false"
+        android:layout_marginTop="25dp"
+        android:text="@string/reviews"/>
+
+    <TextView
+        android:id="@+id/getReviews_textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/titleReviews"
+        android:layout_marginTop="25dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        tools:text="yaaahoooooooooooooooooooo"
+        android:textColor="@color/colorBtn_txt"
+        android:textStyle="italic"
+        android:textSize="21sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
